<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#222"
        android:textStyle="bold"
        android:text="@string/about_header"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#444"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:text="@string/about"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:textStyle="bold"
            android:text="@string/vision_header"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#444"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:text="@string/vision"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:textStyle="bold"
            android:text="@string/mission_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#444"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:text="@string/mission"/>


    </LinearLayout>


</ScrollView>